# CHI_Data

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  sql.py  weather.py
data/processed/2025-08-01/: data.parquet
data/processed/2025-08-02/: data.parquet
data/processed/2025-08-03/: data.parquet
data/processed/2025-08-04/: data.parquet
data/processed/2025-08-05/: data.parquet
data/processed/2025-08-06/: data.parquet
data/processed/2025-08-07/: data.parquet
data/processed/2025-08-08/: data.parquet
data/processed/2025-08-09/: data.parquet
data/processed/2025-08-10/: data.parquet
data/processed/2025-08-11/: data.parquet
data/processed/2025-08-12/: data.parquet
data/processed/2025-08-13/: data.parquet
data/processed/2025-08-14/: data.parquet
data/processed/2025-08-15/: data.parquet
data/processed/2025-08-16/: data.parquet
data/processed/2025-08-17/: data.parquet
data/processed/2025-08-18/: data.parquet
data/processed/2025-08-19/: data.parquet
data/processed/2025-08-20/: data.parquet
data/processed/2025-08-21/: data.parquet
data/processed/2025-08-22/: data.parquet
db/pg/: weather_daily_20250916_190705.csv  weather_dump.sql
db/sqlite/: weather.db
resources/sql/: schema.sql  upsert_weather_daily.sql
src/: __init__.py  analytics.py  config.py  dump_db.py  extract.py  load.py  pipeline.py  transform.py
src/utils/: io.py  logging.py  schema.py
tests/: test_analytics.py  test_config.py  test_extract.py  test_load.py  test_transform.py  test_utils.py
(+80 files in other folders)
