[project]
name = "chi-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Kytsmen Yevhenii",email = "yevheniikytsmen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "openmeteo-requests (>=1.7.2,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
